--- a/package.json
+++ b/package.json
@@ -28,13 +28,18 @@
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.11.6",
-    "@testing-library/react": "^11.2.5",
-    "@types/react-dom": "^17.0.5",
+    "@testing-library/react": "^12.0.0",
+    "@types/react-dom": "^17.0.2",
+    "@types/react-router-dom": "^5.1.6",
+    "@types/react-transition-group": "^4.4.0",
+    "@types/styled-components": "^5.1.11",
     "jest-styled-components": "^7.0.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
-    "styled-components": "^5.2.0"
+    "styled-components": "^5.2.0",
+    "tslib": "^2.0.3",
+    "typescript": "^4.1.5"
   },
   "peerDependencies": {
     "react": "^17.0.2",
@@ -44,11 +49,15 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.9.2",
+    "@rollup/plugin-typescript": "^8.2.3",
+    "@rollup/plugin-url": "^6.0.0",
     "@types/lodash": "^4.14.168",
+    "@types/react-native": "^0.63.52",
     "@types/styled-system": "^5.1.10",
     "lodash": "^4.17.20",
     "react-popper": "^2.2.5",
     "react-transition-group": "^4.4.1",
+    "rollup": "^2.53.3",
     "styled-system": "^5.1.5"
   },
   "publishConfig": {
